--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link rel="stylesheet" type="text/css" href="css/styles.css" />
         <title>RealTime Weather!</title>
     </head>
     <body>
         <div class="inner">
+            <!-- Navbar and Menu -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="title-container">
                     <a class="navbar-brand title" href="#">RealTime Weather</a>
@@ -27,21 +28,21 @@
                         <li class="nav-item">
                             <a class="nav-link units" href="#">°F |°C <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item test">
+                        <li class="nav-item hide">
                             <button class="searchBtn" data-toggle="modal" data-target="#searchModal" type="button"><i class="fas fa-search"></i></button>
                         </li>
                         <li class="nav-item">
                             <span class="nav-link location disabled" href="#" id="location">Location</span>
                         </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search By City" aria-label="Search" id="city" autocomplete="off" />
+                    <form class="form-inline my-2 my-lg-0" x>
+                        <input class="form-control mr-sm-2" type="text" placeholder="Search By City" aria-label="Search" id="city" autocomplete="off" required />
                         <button class="btn btn-outline-success my-2 my-sm-0 search" type="button" data-target="#sharedModal" data-toggle="modal" id="citybtn">Search</button>
                     </form>
                 </div>
             </nav>
 
-            <!-- Search by city result -->
+            <!-- Search by city result / shared modal -->
 
             <div class="modal fade" id="sharedModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -52,32 +53,33 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body" id="modal-body">
                             <div class="card modal-card">
                                 <div class="img-container">
-                                    <img class="card-img forecast-img" src="img/sun.svg" />
+                                    <img class="card-img city-img" id="city-icon" src="css/img/sun.svg" />
                                 </div>
                                 <div class="card-body body-container ">
                                     <div class="weather-container">
-                                        <h5 class="card-title forecast-weather">Clear Sky</h5>
+                                        <h5 class="card-title city-weather" id="city-weather">Clear Sky</h5>
                                     </div>
                                     <div class="forecast-temp__container">
-                                        <p class="card-text temp forecast-temp">28 ºC</p>
+                                        <p class="card-text city-temp" id="city-temp">28 ºC</p>
                                     </div>
                                     <div class="date-container">
-                                        <p class="forecast-date"></p>
+                                        <p class="city-date" id="city-date"></p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button class="btn btn-outline-success my-2 my-sm-0 search" type="button" data-target="#cityForecast" data-dismiss="modal" data-toggle="modal" id="city-forecast">Search</button>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Search by city field in mobile -->
+            <!-- Search by city modal for mobile -->
 
             <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
@@ -90,7 +92,7 @@
                         </div>
                         <div class="modal-body">
                             <form class="form-inline my-2 my-lg-0">
-                                <input class="form-control mr-sm-2" type="search" placeholder="Search By City" aria-label="Search" />
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search By City" aria-label="Search" required />
                                 <button class="btn btn-outline-success my-2 my-sm-0 search" type="button" data-target="#searchModal,#sharedModal" data-dismiss="modal" data-toggle="modal">Search</button>
                             </form>
                         </div>
@@ -98,12 +100,118 @@
                 </div>
             </div>
 
+            <!-- Search by City forecast weather -->
+            <div class="modal fade" id="cityForecast" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="cityForecast-title">Modal title</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="card forecast">
+                                <div class="img-container">
+                                    <img class="card-img cityForecast-img" src="css/img/sun.svg" />
+                                </div>
+                                <div class="card-body body-container">
+                                    <div class="weather-container">
+                                        <h5 class="card-title cityForecast-weather">Clear Sky</h5>
+                                    </div>
+                                    <div class="forecast-temp__container">
+                                        <p class="card-text temp cityForecast-temp">28 ºC</p>
+                                    </div>
+                                    <div class="date-container">
+                                        <p class="cityForecast-date"></p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card forecast">
+                                <div class="img-container">
+                                    <img class="card-img cityForecast-img" src="css/img/sun.svg" />
+                                </div>
+                                <div class="card-body body-container">
+                                    <div class="weather-container">
+                                        <h5 class="card-title cityForecast-weather">Clear Sky</h5>
+                                    </div>
+                                    <div class="forecast-temp__container">
+                                        <p class="card-text temp cityForecast-temp">28 ºC</p>
+                                    </div>
+                                    <div class="date-container">
+                                        <p class="cityForecast-date"></p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card forecast">
+                                <div class="img-container">
+                                    <img class="card-img cityForecast-img" src="css/img/sun.svg" />
+                                </div>
+                                <div class="card-body body-container">
+                                    <div class="weather-container">
+                                        <h5 class="card-title cityForecast-weather">Clear Sky</h5>
+                                    </div>
+                                    <div class="forecast-temp__container">
+                                        <p class="card-text temp cityForecast-temp">28 ºC</p>
+                                    </div>
+                                    <div class="date-container">
+                                        <p class="cityForecast-date"></p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card forecast">
+                                <div class="img-container">
+                                    <img class="card-img cityForecast-img" src="css/img/sun.svg" />
+                                </div>
+                                <div class="card-body body-container">
+                                    <div class="weather-container">
+                                        <h5 class="card-title cityForecast-weather">Clear Sky</h5>
+                                    </div>
+                                    <div class="forecast-temp__container">
+                                        <p class="card-text temp cityForecast-temp">28 ºC</p>
+                                    </div>
+                                    <div class="date-container">
+                                        <p class="cityForecast-date"></p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card forecast">
+                                <div class="img-container">
+                                    <img class="card-img cityForecast-img" src="css/img/sun.svg" />
+                                </div>
+                                <div class="card-body body-container">
+                                    <div class="weather-container">
+                                        <h5 class="card-title cityForecast-weather">Clear Sky</h5>
+                                    </div>
+                                    <div class="forecast-temp__container">
+                                        <p class="card-text temp cityForecast-temp">28 ºC</p>
+                                    </div>
+                                    <div class="date-container">
+                                        <p class="cityForecast-date"></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Main content / current weather / forecast weather -->
+
             <main class="wrapper">
                 <div class="card-container">
                     <div class="card container ">
                         <div class="card p-2 main-card">
                             <div class="img-container">
-                                <img class="card-img" src="img/sun.svg" alt="Card image cap" id="weather_icon" />
+                                <img class="card-img" src="css/img/sun.svg" alt="Card image cap" id="weather_icon" />
                             </div>
                             <div class="card-body body-container p-0">
                                 <div class="weather-container">
@@ -123,9 +231,9 @@
                         <div class="containers upper">
                             <div class="card forecast">
                                 <div class="img-container">
-                                    <img class="card-img forecast-img" src="img/sun.svg" />
+                                    <img class="card-img cityForecast-img" src="css/img/sun.svg" />
                                 </div>
-                                <div class="card-body body-container ">
+                                <div class="card-body body-container">
                                     <div class="weather-container">
                                         <h5 class="card-title forecast-weather">Clear Sky</h5>
                                     </div>
@@ -139,7 +247,7 @@
                             </div>
                             <div class="card forecast">
                                 <div class="img-container">
-                                    <img class="card-img forecast-img" src="img/sun.svg" />
+                                    <img class="card-img forecast-img" src="css/img/sun.svg" />
                                 </div>
                                 <div class="card-body body-container ">
                                     <div class="weather-container">
@@ -157,7 +265,7 @@
                         <div class="containers lower">
                             <div class="card forecast">
                                 <div class="img-container">
-                                    <img class="card-img forecast-img" src="img/sun.svg" />
+                                    <img class="card-img forecast-img" src="css/img/sun.svg" />
                                 </div>
                                 <div class="card-body body-container ">
                                     <div class="weather-container">
@@ -173,7 +281,7 @@
                             </div>
                             <div class="card forecast">
                                 <div class="img-container">
-                                    <img class="card-img forecast-img" src="img/sun.svg" />
+                                    <img class="card-img forecast-img" src="css/img/sun.svg" />
                                 </div>
                                 <div class="card-body body-container ">
                                     <div class="weather-container">
@@ -189,7 +297,7 @@
                             </div>
                             <div class="card forecast">
                                 <div class="img-container">
-                                    <img class="card-img forecast-img" src="img/sun.svg" />
+                                    <img class="card-img forecast-img" src="css/img/sun.svg" />
                                 </div>
                                 <div class="card-body body-container ">
                                     <div class="weather-container">
